welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: unclosed comment
/*while (estSurBiscuit) { 
^Balin:2: error: Missing closing brace `}' assumed here
while (!estSurBiscuit) {
^